test/integration/good/warning/unknown_annotation.stan
parameters {
   @not_a_real_annotation real unused;
}
