test/integration/bad/unnormalized/lupdf_ident.stan
parameters {
    real y_lupdf;
}
model {
    y_lupdf ~ std_normal();
}